# python-app-utils

./: .gitignore  README.md  pyproject.toml
python_app_utils/: config.py  log.py  picker.py  singleton.py
tests/: test_main.py
