[tool.taskipy.tasks]
test = {cmd = "dotenv --file envs/.env.development run -- pytest", help = "Run unit test."}
dev-python = {cmd = "dotenv --file envs/.env.development run -- python", help = "Run python with dev environment."}

[tool.poetry]
name = "python_app_utils"
version = "0.1.0"
description = ""
authors = ["HiraiKyo <kyo.mikhael@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.19"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-env = "^1.1.3"
taskipy = "^1.13.0"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
